complete header and advance box search

--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -201,6 +201,7 @@
       </div>
       <div class="col-md-3">
         <div class="row ">
+          <%= render 'search/advance_search_box' %>
           <%= render 'game_up_comming' %>
         </div>
       </div>
