--- a/app/views/manage/home/show.html.erb
+++ b/app/views/manage/home/show.html.erb
@@ -125,6 +125,7 @@
                 <tbody>
                 <% @user = User.all %>
                 <% @user.each do |user| %>
+                <% if not user.is_admin %>
                 <tr>
                   <td><%= link_to user_profile_home_path(id: user.id) do %> <%= user.email%> <% end %> </td>
                   <td><%= user.full_name %>
@@ -132,13 +133,15 @@
                   <td><%= user.created_at.to_date %></td>
                   <td><%= user.reviews.count() %></td>
                   <td><%= user.comments.count() %></td>
-                  <% if user.is_blocked == false %>
-                  <td><%= link_to manage_user_block_path(user.id), method: :patch do %> block <% end %></td>
-                  <% else %>
-                  <td><%= link_to manage_user_unblock_path(user.id), method: :patch do %> unblock <% end %></td>
-                  <% end %>
+                  <%= render "manage/users/block", user: user %>
+                  <!--<% if user.is_blocked == false %>-->
+                  <!--<td><%= link_to manage_user_block_path(user.id), method: :get do %> block <% end %></td>-->
+                  <!--<% else %>-->
+                  <!--<td><%= link_to manage_user_unblock_path(user.id), method: :get do %> unblock <% end %></td>-->
+                  <!--<% end %>-->
                   
                 </tr>
+                <% end %>
                 <% end %>
                
                 </tfoot>
