finish user profile

--- a/app/assets/stylesheets/user_profile.scss
+++ b/app/assets/stylesheets/user_profile.scss
@@ -65,6 +65,9 @@ overflow: hidden;
     margin-left: 25px;
     position: absolute;
 }
+.btn-xs{
+  margin-right: 10px;
+}
 
 body {
     background-color: #e8e8e8;
