--- a/app/views/manage/users/search_user.html.erb
+++ b/app/views/manage/users/search_user.html.erb
@@ -134,25 +134,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <% @user_list.each do |user| %>
-                  <tr>
-                    <td><%= link_to user_profile_home_path(id: user.id) do %> <%= user.email %>
-                      <% end %> </td>
-                    <td><%= user.full_name %>
-                    </td>
-                    <td><%= user.created_at.to_date %></td>
-                    <td><%= user.reviews.count() %></td>
-                    <td><%= user.comments.count() %></td>
-                    <% if user.is_blocked == false %>
-                      <td><%= link_to manage_user_block_path(user.id), method: :patch do %> block
-                        <% end %></td>
-                    <% else %>
-                      <td><%= link_to manage_user_unblock_path(user.id), method: :patch do %> unblock
-                        <% end %></td>
-                    <% end %>
-
-                  </tr>
-                <% end %>
+               <%= render "manage/users/users_list" , users: @user_list%>
 
                 </tfoot>
                 </table>
