--- a/app/views/manage/users/_block.html.erb
+++ b/app/views/manage/users/_block.html.erb
@@ -1,8 +1,7 @@
-<td><div id="block_<%= user.id %>">
+<div id="block_<%= user.id %>">
 <% if user.is_blocked == false %>
 <%= link_to manage_user_block_path(user.id), method: :get, remote: true do %> block <% end %>
 <% else %>
 <%= link_to manage_user_unblock_path(user.id), method: :get, remote: true do %> unblock <% end %>
 <% end %>
 </div>
-</td>
